--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,27 @@
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-$color-grey-dark: #777;
-$color-white: #fff;
-$color-black: #000;
+@import "components/bg-video";
+@import "components/button";
+@import "components/card";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/form";
+@import "components/popup";
+@import "components/story";
+
+@import "layout/footer";
+@import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
+
+@import "pages/home";
 
 *,
 *::before,
@@ -15,94 +31,6 @@ $color-black: #000;
     box-sizing: border-box;
     /*dimensioni complessive dell'elemento includeranno il padding e il bordo */
 }
-
-html {
-    font-size: 10px; /*Importo la 'root' dimensione del font nel tag HTML, posso così usare dimensioni relative nel resto del file.*/
-} 
-
-/* Impostazioni font*/
-body {
-     font-family: "Lato", sans-serif;
-     font-weight: 400;
-     font-size: 1.6rem;
-     line-height: 1.7;
-     color: $color-grey-dark;
-     padding: 3rem;
-}
-
-/* Impostazioni header*/
-.header {
-    height: 95vh;
-    background-image: linear-gradient(
-        to right bottom,
-    rgba($color-primary-light,0.8),
-    rgba($color-primary-dark,0.8)),
-    url(../img/hero.jpg); /* Per inserire un'immagine di background nell'header. Abbiamo nello strato sopra il gradiente e nel livello sotto l'immagine vera e propria*/
-    background-size: cover; /* l'immagine di sfondo viene ridimensionata per coprire l'intera area dell'elemento in modo proporzionale*/
-    background-position: top; /* Rimane ancorato sopra*/
-    clip-path: polygon(0 0,100% 0, 100% 75vh, 0 100%) ;/*Parto da in alto a sinistra in senso orario*/
-    position: relative; /* il figlio logo-box prenderò header come origine da cui contare */
-
-    /* LOGO */
-
-    &__logo-box {
-    position: absolute; /* La posizione da cui inizia a contare i pixel è quella della madre, in questo caso header, che deve aver come posizione relative, e il figlio posizione absolute*/
-    top: 4rem; 
-    left: 4rem;
-    }
-
-    &__logo {
-        height: 2.5rem; /*La larghezza verrà automaticamente dal browser a partire dall'altezza data */
-    }
-
-    /* Scritte nell'header */
-    &__text-box {
-    position: absolute;
-    top: 50%; /*In relazione all'elemento padre */
-    left: 50%;
-    transform: translate(-50%,-50%); /*In relazione all'elemento stesso.Trasla l'elemento, in questo caso verso alto a sinistra, è negativo sull'asse x e y, quindi in questo modo posso centrare perfettamente il testo all'interno dell'header. */
-    text-align: center;
-}
-
-}
-
-
-.heading-primary {
-color: $color-white;
-text-transform: uppercase;
-
-backface-visibility: hidden; /*Questo si mette come fix a piccoli errori nell'animazione sull'asse */
-margin-bottom: 6rem;
-
-&--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-
-    animation-name: moveInLeft; /*Richiamo il keyframe animazione che ho creato sotto*/
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-   
-
-    /*Altre cose che si possono fare con animation:
-    animation-delay: 3s;
-     animation-iteration-count: 3;
-    
-    */
-}
-    &--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.74rem;
-    /* Aggiungo animazione */
-    animation-name: moveInRight;
-    animation-duration: 1s;
-    
-}
-}
-
 
 
 
@@ -160,69 +88,3 @@ margin-bottom: 6rem;
     }
 }
 
-/*BOTTONI*/
-
-/* Preuso classi: per stilizzare gli elenti in condizioni particolari*/
-/* 
-link: è un link non visitati
-visited: quando l'ho già visitato
-hover: quando ci passi sopra col mouse
-active: quando lo clicchi
-*/
-.btn {
-    &:link, &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block; /* così funziona come se fosse elemento di blocco*/
-    border-radius: 10rem;
-    transition: all .2s; /*tutte le proprietà posso essere animate, in tot secondi */
-    position: relative; /*Così il bottone after può prendere questo come riferimento di posizione */
-    }
-    &:hover {
-    transform: translateY(-3px); /*Così su muove in su*/
-    /*box-shadow: orizzontale verticale sfocato raggio */
-    box-shadow: 0 1rem 2rem rgba($color-black, .2); /*Ombra nera con 20% di opacità*/
-        &:after {
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0; /*Così farà un fade-out */
-        } 
-
-    }
-
-    &:active {
-        transform: translateY(-1px); /*Così quando clicchiamo dopo hover, si abbassa un po'*/
-        box-shadow: 0 .5rem 1rem rgba($color-black, .2);   /*diminuindo sfocatore e raggio dell'ombra, sembra abbassarsi, quindi avvicinarsi sul foglio*/ 
-    }
-        
-        
-
-    &--white {
-        background-color: $color-white;
-        color:$color-grey-dark;
-
-        &::after{
-            background-color: $color-white;
-        }
-    }
-    &::after{ /*Dopo pseudo classe*/
-        /* Creiamo un elento uguale al nostro bottone, da mettere dietro*/
-        content:"" ; /*Dobbiamo dichiarlo, anche se vuoto*/
-        display: inline-block;
-        height: 100%;
-        width: 100%;
-        border-radius: 10rem;
-        position: absolute;
-        top: 0; /*il suo elemento di riferimento imposto che sia il bottone, mettendo posizione relative al bottone */
-        left:0;
-        z-index: -1; /*così è SOTTO */
-        transition: all .4s;
-
-    }
-    
-
-    &--animated {
-        animation: moveInBottom .5s ease-out .75s;
-        animation-fill-mode: backwards; /*Mette in automatico i valori a zero iniziali*/
-    }
-}
