--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,3 +4,30 @@
     margin-top: -20vh; // con negativo si muove in su, invece che in giù, così lo sfondo va a coprire quel triangolo lasciato libero dal poligono
     
 }
+
+.section-features{
+    padding: 20rem 0;
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)),
+    url(../../img/nat-4.jpg);
+    background-size: cover;
+
+    margin-top: 14rem;
+
+    // Creaimo l'effetto SKEW
+    transform: skewY(-7deg);
+    & > *{ //così seleziono tutti i figli diretti
+    transform: skewY(7deg); //così compenso per i boxes figli
+    }
+}
+
+// SEZIONE TOURS
+.section-tours{
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 50rem 0;
+    margin: -10rem;
+    
+
+}
