--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,42 +1,52 @@
 html {
-    font-size: 10px; /*Importo la 'root' dimensione del font nel tag HTML, posso così usare dimensioni relative nel resto del file.*/
-} 
+    font-size: 10px;
+    /*Importo la 'root' dimensione del font nel tag HTML, posso così usare dimensioni relative nel resto del file.*/
+}
 
 /* Impostazioni font*/
 body {
-     font-family: "Lato", sans-serif;
-     font-weight: 400;
-     font-size:  $default-font-size;
-     line-height: 1.7;
-     color: $color-grey-dark;
-     padding: 3rem;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-size: $default-font-size;
+    line-height: 1.7;
+    color: $color-grey-dark;
 }
 
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
-    
-    backface-visibility: hidden; /*Questo si mette come fix a piccoli errori nell'animazione sull'asse */
+
+    backface-visibility: hidden;
+    /*Questo si mette come fix a piccoli errori nell'animazione sull'asse */
     margin-bottom: 6rem;
-    
+
+   
+
     &--main {
         display: block;
         font-size: 6rem;
         font-weight: 400;
         letter-spacing: 3.5rem;
-    
-        animation-name: moveInLeft; /*Richiamo il keyframe animazione che ho creato sotto*/
+
+        animation-name: moveInLeft;
+        /*Richiamo il keyframe animazione che ho creato sotto*/
         animation-duration: 1s;
         animation-timing-function: ease-out;
-       
-    
+
+
         /*Altre cose che si possono fare con animation:
         animation-delay: 3s;
          animation-iteration-count: 3;
         
         */
+
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
-        &--sub {
+
+    &--sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
@@ -44,38 +54,52 @@ body {
         /* Aggiungo animazione */
         animation-name: moveInRight;
         animation-duration: 1s;
-        
-    }
-    }
 
-    .heading-secondary {
-        font-size: 3.5rem;
-        text-transform: uppercase;
-        font-weight: 700;
-        display: inline-block; 
-        // per fare il colore di un testo con gradiente
-        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-        -webkit-background-clip: text;
-        color: transparent;
-        letter-spacing: 2px;
-        transition: all .2s;
-
-        &:hover{
-            transform: skewY(2deg) skewX(15deg) scale(1.1);
-            text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
         }
-    }
-
-    .heading-tertiary {
-        font-size:  $default-font-size;
-        font-weight: 700;
-        text-transform: uppercase;
 
     }
+}
 
-    .paragraph {
-        font-size:  $default-font-size;
-        &:not(:last-child){
-            margin-bottom: 3rem;
-        }
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    // per fare il colore di un testo con gradiente
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: 2px;
+    transition: all .2s;
+
+    @include respond(tab-port){
+        font-size: 3rem;
     }
+
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+
+}
+
+.paragraph {
+    font-size: $default-font-size;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
