--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,9 +1,10 @@
-// CARD COMPONETE
+// COMPONENTE DELLA CARRD
+// Va una rotazione di 180 gradi sull'asse delle y
 
 .card {
    
-    perspective: 150rem; //mettiamo un pixel alto
-    -moz-perspective: 150rem; // per farlo funzionare anche in mozzilla firefox
+    perspective: 150rem; //mettiamo un numero alto, messo sul parent per la rotazione
+    -moz-perspective: 150rem; // per farlo funzionare anche in mozilla firefox
     position: relative;
     height: 50rem;
 
@@ -14,6 +15,7 @@
 
         height: 50rem;
         transition: all .8s ease;
+
         position: absolute;
         top: 0;
         left: 0;
@@ -39,5 +41,35 @@
     
     transform: rotateY(0);
 
+}
+// Stilizzazione del davanti
+&__picture{
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    &--1 {
+        background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg);
+    }
+    &--2 {
+        background-image: url(../img/nat-5.jpg);
+    }
+    &--3 {
+        background-image: url(../img/nat-5.jpg);
+    }
+    
+
+}
+&__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: $color-white;
+    position: absolute;
+    text-align: right;
+    top: 12rem;
+    right: 2rem;
 }
 }
